tests/invalid-syntax/61015_mismatched_parantheses/mismatched_parantheses.agu
-- Author: 61015, Filipe Lopes

let f (x : Int) : Int = (x + 1;
print(f(5));